[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/overlays/score_boards.gd" type="Script" id=3]
[ext_resource path="res://src/overlays/score_board.tscn" type="PackedScene" id=4]

[node name="ScoreBoards" type="Node2D"]
z_index = 1
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 61.0
margin_bottom = 46.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TierRatioBoard" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 180.0
margin_bottom = 42.0
label = "Tier:"
value = "0 / 0"

[node name="HeightBoard" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 47.0
margin_right = 180.0
margin_bottom = 89.0
label = "Height:"

[node name="ScoreBoard" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 94.0
margin_right = 180.0
margin_bottom = 136.0
label = "Score:"

[node name="NextRankAtBoard" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 141.0
margin_right = 180.0
margin_bottom = 183.0
label = "Next rank at:"

[node name="MultiplierBoard" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 188.0
margin_right = 180.0
margin_bottom = 230.0
label = "Multiplier:"

[node name="SpeedBoard" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 235.0
margin_right = 180.0
margin_bottom = 277.0
label = "Speed:"

[node name="LivesBoard" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 282.0
margin_right = 180.0
margin_bottom = 324.0
label = "Lives:"

[node name="TimeBoard" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_left = -0.0166667
anchor_right = -0.0166667
anchor_bottom = 0.0
margin_top = 329.0
margin_right = 180.0
margin_bottom = 371.0
label = "Time:"
is_wide_value = true

[node name="DebugTimeBoard" parent="VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 376.0
margin_right = 180.0
margin_bottom = 418.0
label = ""
